update twitch endpoints

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>MulTVers</title>
+    <title>ViewerDeck</title>
     <meta name="author" content="Yannick S. FELER">
-    <meta name="description" content="MulTVers. Got all VoD platform on one site.">
-    <meta name="twitter:title" content="MulTVers. Got all VoD platform on one site.">
+    <meta name="description" content="ViewerDeck. Got all VoD platform on one site.">
+    <meta name="twitter:title" content="ViewerDeck. Got all VoD platform on one site.">
     <link rel="icon" type="image/png" href="favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="navbar-brand">
-                    <p class="title"><a :href="host">Mul[T•V]ers</a></p>
+                    <p class="title"><a :href="host">ViewerDeck</a></p>
 
                 </div>
 
@@ -169,7 +169,7 @@
     <br>
     <footer class="footer">
         <div class="content has-text-centered">
-            <strong>MulTVers</strong> Forge by <a href="https://link.yannicksf.xyz" style="color: #ff0d0d;">Yannick <strong style="color:#ffdf0d;">S.</strong>F</a>.
+            <strong>ViewerDeck</strong> Forge by <a href="https://link.yannicksf.xyz" style="color: #ff0d0d;">Yannick <strong style="color:#ffdf0d;">S.</strong>F</a>.
             <br/> The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
             <br/>The website content is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
             </p>
@@ -216,7 +216,7 @@
             },
             data() {
                 return {
-                    host: "http://localhost:3000", // "https://app.yannicksf.xyz"
+                    host: "https://tv.yannicksf.xyz", // "http://localhost:3000"
                     currentPlayer: undefined,
                     playerMode: 'TW',
                     index: -1,
